<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="addMsgFrag"
            type="com.akshay.reminder.add_msg.view.AddMessageFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_add_msg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/add_message"
            android:inputType="textPersonName"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_show_at"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/show_at"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".3" />

        <LinearLayout
            android:id="@+id/ll_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_show_at">

            <EditText
                android:id="@+id/et_hh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:ems="10"
                android:hint="@string/hh"
                android:inputType="number"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_mm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:ems="10"
                android:hint="@string/mm"
                android:inputType="number"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spin_am_pm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:entries="@array/am_pm" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:onClick="@{(v)-> addMsgFrag.onSaveClick()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_time"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintWidth_percent=".5" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>